# lightweight-graphrag

./: Makefile  README.md  config  crime_and_punishment.txt  oldmanandthesea.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  zshrc
app/: main.py
app/chunking/: base.py  llamaindex_chunking.py  simple_chunking.py
app/embedding/: base.py  x_vectorizer.py
app/llm/: base.py  prompts.py  x_llm.py
app/models/: chunk.py  graph.py
app/repositories/: base_graph.py  neo4j_graph.py
app/repositories/graph_db/: base.py  neo4j_graph.py
app/repositories/vector_db/: base.py  weaviate_db.py
app/services/: answer_question.py  data_processing.py  service.py
app/utils/: config.py  vector_db.py
tests/: test_chunking.py  test_data_processing.py  test_vectorizer.py
